<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

        <!-- Upcoming Events Title -->
        <TextView
            android:id="@+id/tv_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="7dp"
            android:paddingEnd="0dp"
            android:text="@string/home_upcoming_event"
            android:textColor="@color/text_main_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_upcoming"
            app:layout_constraintStart_toStartOf="parent" />


        <!-- Upcoming Events RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming"
            app:layout_constraintBottom_toTopOf="@id/tv_finished"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="true" />

        <TextView
            android:id="@+id/tvNoUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_upcoming_events"
            android:textSize="16sp"
            android:textColor="@color/text_main_color"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_finished"/>

        <!-- Finished Events Title -->
        <TextView
            android:id="@+id/tv_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:paddingEnd="0dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_main_color"
            android:text="@string/home_finished_event"
            app:layout_constraintTop_toBottomOf="@id/rv_upcoming"
            app:layout_constraintBottom_toTopOf="@id/rv_finished"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Finished Events RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_finished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="56dp"
            app:layout_constraintTop_toBottomOf="@id/tv_finished"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="true" />

        <!-- ProgressBar for Loading -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <!-- View Error -->
        <LinearLayout
            android:id="@+id/viewError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgError"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/image_error"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:textSize="16sp"
                android:textColor="@color/text_main_color"
                android:paddingTop="8dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
