<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:id="@+id/details"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mediaCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/details_event_photo"
            android:scaleType="centerCrop"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textStyle="bold"
            android:textColor="@color/text_main_color"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/ownerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="4dp"
            android:textColor="@color/text_main_color"
            android:paddingEnd="4dp"/>

        <TextView
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textSize="16sp"
            android:textColor="@color/text_main_color"
            android:layout_marginBottom="8dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/text_main_color"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/eventQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/text_main_color"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="14sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/text_main_color"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnOpenLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_details_link"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/background_main_color"
            android:textColor="@color/text_button_color"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnFav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_add_to_favorite"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/background_main_color"
            android:textColor="@color/text_button_color"
            android:layout_marginTop="16dp" />



    </LinearLayout>
</ScrollView>
